--- a/build
+++ b/build
@@ -1,2 +1,2 @@
 #!/bin/bash
-g++ -o main.out main.cpp mainwindow.cpp moildevslim.cpp configdata.cpp `pkg-config --cflags opencv` `pkg-config --libs opencv` 
+g++ -o main.out main.cpp mainwindow.cpp moildev.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
