--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 if [[ "$OSTYPE" == "linux-gnueabihf" ]]; then
-g++ -o main.out main.cpp mainwindow.cpp moildev_rpi.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
+g++ -o mainmoil main.cpp mainwindow.cpp moildev_rpi.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
 elif [[ "$OSTYPE" == "linux-gnu"* ]]; then
 g++ -o main.out main.cpp mainwindow.cpp moildev.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
 fi
