--- a/build
+++ b/build
@@ -1,6 +1,8 @@
 #!/bin/bash
+g++ -c apps/car6view/car6view.cpp
+g++ -c apps/measure/measure.cpp
 if [[ "$OSTYPE" == "linux-gnueabihf" ]]; then
-g++ -o mainmoil main.cpp mainwindow.cpp moildev_rpi.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
+g++ -o mainmoil main.cpp car6view.o measure.o moildev_rpi.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
 elif [[ "$OSTYPE" == "linux-gnu"* ]]; then
-g++ -o mainmoil main.cpp mainwindow.cpp moildev.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
+g++ -o mainmoil main.cpp car6view.o measure.o moildev.a `pkg-config --cflags opencv` `pkg-config --libs opencv` 
 fi
